@@ -1,0 +1,1 @@
+activate register-syslog-ng-plugin
